# qwq-tag

./: README.md  pyproject.toml  testing.py
.github/workflows/: test.yaml
src/qwq_tag/: qwq_tag.py
