[project]
name = "qwq-tag"
version = "0.1.2"
description = "QwQ Tag for parsing xml"
authors = [
    {name = "yanli", email = "mail@yanli.one"},
]
dependencies = ["lxml>=6.0.0", "pydantic>=2.11.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pyright]
venvPath = ".venv"

[tool.ruff]
target-version = "py310"
exclude = [".venv"]
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = [
    "RUF001",  # '，' vs. ','
    "RUF003",  # Ambiguous unicode character comment
    "E501",    # Line too long
    "E402",    # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "SIM105",  # Use `contextlib.suppress(Exception)` instead of `try`-`except`-`pass`
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
]

[tool.ruff.lint.isort]
known-first-party = ["qwq_tag"]


[tool.pytest.ini_options]
log_cli_level = "INFO"

[tool.pdm.scripts]
fix = { shell = "ruff check --fix && ruff format" }
check = { shell = 'ruff check && ruff format --check' }
test = { shell = "pdm run pytest" }
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
